--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hello-blockstack",
-  "version": "0.0.0",
-  "description": "A simple Blockstack app",
+  "name": "notarius",
+  "version": "0.0.1",
+  "description": "A decentralized notary service",
   "main": "index.js",
   "scripts": {
     "browserify": "browserify requires.js -o public/bundle.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/blockstack/hello-blockstack.git"
+    "url": "git+https://github.com/euromutt/notarius.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/blockstack/hello-blockstack/issues"
+    "url": "https://github.com/euromutt/notarius/issues"
   },
-  "homepage": "https://github.com/blockstack/hello-blockstack#readme",
+  "homepage": "https://github.com/euromutt/notarius#readme",
   "devDependencies": {
     "browserify": "^14.1.0",
     "express": "^4.15.2",
