--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Hello, Blockstack",
+  "name": "Notarius",
   "start_url": "localhost:5000",
-  "description": "A simple demo of Blockstack Auth",
+  "description": "A decentralized notary service",
   "icons": [{
-    "src": "https://helloblockstack.com/icon-192x192.png",
+    "src": "icon-192x192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
