--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "start_url": "localhost:5000",
   "description": "A decentralized notary service",
   "icons": [{
-    "src": "https://github.com/euromutt/notarius/blob/master/public/icon-192x192.png",
+    "src": "https://drive.google.com/file/d/1pMwFQIxvwCJrKXpCgkdnRhf73lOY4Raf/view?usp=sharing",
     "sizes": "192x192",
     "type": "image/png"
   }]
