--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "start_url": "localhost:5000",
   "description": "A decentralized notary service",
   "icons": [{
-    "src": "localhost:5000/icon-192x192.png",
+    "src": "/public/icon-192x192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
