--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "start_url": "localhost:5000",
   "description": "A decentralized notary service",
   "icons": [{
-    "src": "https://drive.google.com/file/d/1CJOq5O4aYSSSRsHSIfNdfu_g3J3rx4wp/view?usp=sharing",
+    "src": "https://drive.google.com/file/d/1CJOq5O4aYSSSRsHSIfNdfu_g3J3rx4wp/view",
     "sizes": "192x192",
     "type": "image/png"
   }]
